--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-this is just a ChatServer which programing by Python code,it can access the server use telnet,for how to use it please check the PDF file,Thanks!
+ a ChatServer which programing by Python code,it can access the server use telnet,for how to use it please check the PDF file,Thanks!
