--- a/README
+++ b/README
@@ -1,1 +1,2 @@
  a ChatServer which programing by Python code,it can access the server use telnet,for how to use it please check the PDF file,Thanks!
+this is the code from Beginning Python from novice to professional second edition (APRESS)
